2014-01-27  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/zsh.mdd: update 31983 to suppress stdout from
	cmp, too.

2014-01-23  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/arith.yo: use LPAR() instead of parens
	in sqrt example

2014-01-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 32299: Doc/Zsh/arith.yo, Functions/Misc/zcalc, Src/math.c,
	Src/params.c, Src/subst.c, Test/C01arith.ztst: add
	ability to use "_" at the end of a [#] arithmetic expression
	to get underscores to space numeric output.

2014-01-22  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Src/mem.c: reformulate 32285 to lift the fheap->sp
	test out of the loop, improve commentary

2014-01-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 32294 (plus typo fix): Src/utils.c: prevent buffer overflow when
	scanning very long directory paths for symbolic links

	* users/18335: Completion/Zsh/Command/_typeset: avoid passing to
	"functions" those typeset options that it does not accept

2014-01-18  Barton E. Schaefer  <schaefer@zsh.org>

	* 32285: Src/mem.c (freeheap): when the last-arena-with-free-space
	pointer (fheap) points to an arena that is going to be discarded
	because it has become empty, loop back through the entire linked
	list of arenas to find another partly-filled arena; fixes crash
	wherein pushheap followed by freeheap could orphan the whole list
	of arenas in some circumstances

	* 32283: Src/Zle/complist.c: avoid using a negative number for
	available vertical space when the terminal has only a small number
	of lines; fixes crash in menu selection

2014-01-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Daniel Hahler: 32271: Doc/Zsh/compsys.yo: fix matcher list
	example.

2014-01-17  Peter Stephenson  <p.stephenson@samsung.com>

	* sergio: 32267: Completion/Linux/Command/_modutils: modinfo may
	not be in user's path, so use explicit path as already done for lsmod.

2014-01-17  Frank Terbeck  <ft@bewatermyfriend.org>
